# living-chess-site

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  nixpacks.toml  railway.toml
content/blog/: arqus-innovators-award.md  communication-culture-24.md  communication-culture-25.md  create-culture-sprint-vilnius.md  distributed-decision-making-renewed.md  distributed-decision-making.md  falling-walls-lab-wroclaw.md  kismif-conference-porto.md
content/news/: arqus-innovators-award.md  communication-culture-24.md  communication-culture-25.md  create-culture-sprint-vilnius.md  falling-walls-lab-wroclaw.md  kismif-conference-porto.md
src/: blog.rs  config.rs  main.rs  news.rs
src/routes/: api.rs  blog.rs  mod.rs  news.rs  pages.rs  seo.rs  techlab.rs
static/assets/: blog.css  hero.js  living-chess-patch.css  living-chess.css  site.js  walkthrough.js
templates/: blog_list.html  blog_post.html  index.html  nav.html  news_list.html  news_post.html  techlab.html
