[package]
name = "living_chess"
version = "0.1.0"
edition = "2021"

[dependencies]
axum               = { version = "0.7", features = ["macros"] }
tokio              = { version = "1",   features = ["full"] }
tower-http         = { version = "0.5", features = ["fs", "compression-gzip", "compression-br", "trace"] }
askama             = { version = "0.12", features = ["with-axum"] }
askama_axum        = "0.4"
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono             = { version = "0.4", features = ["serde"] }
dotenvy            = "0.15"
pulldown-cmark     = { version = "0.12", default-features = false, features = ["html"] }
once_cell          = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
